# rust-seek

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
src/: annotate_app.rs  app.rs  main.rs  searcher.rs  sync_app.rs  sync_state.rs  sync_syncer.rs  sync_watcher.rs  theme.rs
