[package]
name = "rust-seek"
version = "0.1.0"
edition = "2021"
description = "A high-performance file and text search tool"

[package.metadata.bundle]
name = "Rust Seek"
identifier = "com.rustseek.app"
icon = []
copyright = "MIT 2025"
category = "public.app-category.utilities"

[dependencies]
eframe = "0.31"
egui = "0.31"
regex = "1"
ignore = "0.4"
memmap2 = "0.9"
anyhow = "1"
num_cpus = "1"
rfd = "0.15"
open = "5.3.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
encoding_rs = "0.8.35"
unicode-normalization = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
