[package]
name = "rust-seek"
version = "0.2.0"
edition = "2021"
description = "File search + directory sync — single binary"

[package.metadata.bundle]
name = "Rust Seek"
identifier = "com.rustseek.app"
icon = []
copyright = "MIT 2025"
category = "public.app-category.utilities"

[dependencies]
eframe = "0.31"
egui = "0.31"
# Search
regex = "1"
ignore = "0.4"
memmap2 = "0.9"
num_cpus = "1"
open = "5.3.3"
encoding_rs = "0.8.35"
# Sync
notify = "6"
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1"
# Shared
anyhow = "1"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
unicode-normalization = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
